feat: added sample side menu component

--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -1,7 +1,9 @@
 <app-navbar></app-navbar>
 <div class='max-w-full mx-auto'>
   <div class='flex flex-col sm:flex-row gap-x-5'>
-    <div class='flex-auto pb-6 hidden lg:flex'></div>
+    <div class='flex-auto pb-6 hidden lg:flex'>
+      <app-menu></app-menu>
+    </div>
     <div class='sm:w-5/6 pb-6'>
       <div class='flex flex-col sm:flex-row sm:flex-wrap justify-center px-10 gap-4 mt-10'>
         <div>
