feat(pages): added page list page and pages list component

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -79,6 +79,19 @@
             <span class='ml-3'>Dashboard</span>
           </a>
         </div>
+        <div>
+          <a class='flex items-center px-4 py-2 text-sm text-gray-600 rounded-lg hover:bg-gray-100 hover:text-black'
+             routerLink='/pages/list'>
+            <div class='pr-2'>
+              <svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6' fill='none' viewBox='0 0 24 24' stroke='currentColor'
+                   stroke-width='2'>
+                <path stroke-linecap='round' stroke-linejoin='round'
+                      d='M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z' />
+              </svg>
+            </div>
+            <span class='ml-3'>Pages</span>
+          </a>
+        </div>
       </nav>
       <div class='flex flex-col gap-y-1 px-2 py-6 sticky inset-x-0 bottom-0 border-t border-gray-100'>
         <div>
