--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -61,7 +61,7 @@
           </article>
         </div>
       </div>
-      <div class='sm:w-5/6 pb-6 justify-center mx-auto space-y-5 mt-10 px-10 sm:px-0'>
+      <div class='flex flex-col justify-center px-10 gap-4 mt-10'>
         <div>
           <div class='bg-white border border-gray-100 rounded-lg shadow-lg pb-10 pt-5 px-5'>
             <div class='pb-5 text-md text-gray-600'>Latest Comments</div>
