--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -15,14 +15,14 @@
       </div>
       <nav class='flex flex-shrink space-x-1'>
         <div class='sm:hidden'>
-          <a class='flex items-center py-2 text-sm text-gray-600 rounded-lg hover:text-black' (click)='toggleNavBarModal()' href='#'>
-            <div class='pr-2'>
-              <svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-black' fill='none' viewBox='0 0 24 24' stroke='currentColor'
+          <button class='flex items-center py-2 text-sm text-gray-600 rounded-lg hover:text-black' (click)='toggleNavBarModal()'>
+            <div>
+              <svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6' fill='none' viewBox='0 0 24 24' stroke='currentColor'
                    stroke-width='2'>
                 <path stroke-linecap='round' stroke-linejoin='round' d='M4 6h16M4 12h16M4 18h16' />
               </svg>
             </div>
-          </a>
+          </button>
         </div>
         <div class='hidden sm:flex'>
           <a class='flex items-center py-2 text-sm text-gray-600 rounded-lg hover:text-black' href='#'>
