chore(pages): added page data update after successful page update

--- a/src/app/pages/pages/pages-detail/pages-detail.component.html
+++ b/src/app/pages/pages/pages-detail/pages-detail.component.html
@@ -143,19 +143,13 @@
                 </div>
                 <div>
                   <label>
-                    <div class='block text-sm text-slate-700'>Publish Date</div>
-                    <div class='text-sm text-slate-700'>{{ page?.publishDate || "Unknown date" }}</div>
-                  </label>
-                </div>
-                <div>
-                  <label>
                     <div class='block text-sm text-slate-700'>Create Date</div>
                     <div class='text-sm text-slate-700'>{{ page?.createDateTime || "Unknown date" }}</div>
                   </label>
                 </div>
                 <div>
                   <label>
-                    <div class='block text-sm text-slate-700'>Last Update Date</div>
+                    <div class='block text-sm text-slate-700'>Update Date</div>
                     <div class='text-sm text-slate-700'>{{ page?.updateDateTime || "Unknown date" }}</div>
                   </label>
                 </div>
