--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -2,7 +2,8 @@
   <div class='flex flex-col justify-between bg-white'>
     <nav class='flex flex-col gap-y-1 px-2 py-6 pb-10'>
       <div>
-        <a class='flex items-center px-4 py-2 text-sm text-gray-600 rounded-lg hover:bg-gray-100 hover:text-black' href='#'>
+        <a class='flex items-center px-4 py-2 text-sm text-gray-600 rounded-lg hover:bg-gray-100 hover:text-black'
+           routerLink='/'>
           <div class='pr-2'>
             <svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6' fill='none' viewBox='0 0 24 24'
                  stroke='currentColor'
@@ -15,17 +16,48 @@
         </a>
       </div>
       <div>
-        <a class='flex items-center px-4 py-2 text-sm text-gray-600 rounded-lg hover:bg-gray-100 hover:text-black'
-           routerLink='/pages/list'>
-          <div class='pr-2'>
-            <svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6' fill='none' viewBox='0 0 24 24' stroke='currentColor'
+        <details class='group'>
+          <summary
+            class='flex items-center px-4 py-2 text-sm text-gray-600 rounded-lg
+             cursor-pointer hover:bg-gray-100 hover:text-black'>
+            <svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6' fill='none' viewBox='0 0 24 24'
+                 stroke='currentColor'
                  stroke-width='2'>
               <path stroke-linecap='round' stroke-linejoin='round'
                     d='M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z' />
             </svg>
-          </div>
-          <span class='ml-3'>Pages</span>
-        </a>
+            <span class='ml-5'>Pages</span>
+            <div class='ml-auto transition duration-300 shrink-0 group-open:-rotate-180'>
+              <svg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke-width='1.5'
+                   stroke='currentColor' class='w-5 h-5'>
+                <path stroke-linecap='round' stroke-linejoin='round' d='M19.5 8.25l-7.5 7.5-7.5-7.5' />
+              </svg>
+            </div>
+          </summary>
+          <nav class='mt-1.5 ml-8 flex flex-col'>
+            <div>
+              <a routerLink='/pages/add'
+                 class='flex items-center px-4 py-2 text-sm text-gray-600 rounded-lg hover:bg-gray-100 hover:text-black'>
+                <svg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke-width='1.5'
+                     stroke='currentColor' class='w-6 h-6'>
+                  <path stroke-linecap='round' stroke-linejoin='round' d='M12 5v14m7-7H5' />
+                </svg>
+                <span class='ml-3 text-sm font-medium'>Page Add</span>
+              </a>
+            </div>
+            <div>
+              <a routerLink='/pages/list'
+                 class='flex items-center px-4 py-2 text-sm text-gray-600 rounded-lg hover:bg-gray-100 hover:text-black'>
+                <svg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke-width='1.5'
+                     stroke='currentColor' class='w-6 h-6'>
+                  <path stroke-linecap='round' stroke-linejoin='round'
+                        d='M3.75 12h16.5m-16.5 3.75h16.5M3.75 19.5h16.5M5.625 4.5h12.75a1.875 1.875 0 010 3.75H5.625a1.875 1.875 0 010-3.75z' />
+                </svg>
+                <span class='ml-3 text-sm font-medium'>Page List</span>
+              </a>
+            </div>
+          </nav>
+        </details>
       </div>
     </nav>
   </div>
